--- a/rabbithole/src/app/components/home/landingpage/landingpage.component.html
+++ b/rabbithole/src/app/components/home/landingpage/landingpage.component.html
@@ -9,7 +9,7 @@
 
     </div>
 
-    <div id="homescreenImage1"><img src="../assets/images/bolder.svg"></div>
-    <div id="homescreenImage2"><img src="../assets/images/tree-bolder.svg"></div> 
-    <div id="homescreenImage3"><img src="../assets/images/retrorabbit_pillar.svg"></div>
+    <div id="homescreenImage1"><img src="../../../../assets/images/bolder.svg"></div>
+    <div id="homescreenImage2"><img src="../../../../assets/images/tree-bolder.svg"></div> 
+    <div id="homescreenImage3"><img src="../../../../assets/images/retrorabbit_pillar.svg"></div>
 </div>
