--- a/rabbithole/src/app/components/home/auth/auth.component.scss
+++ b/rabbithole/src/app/components/home/auth/auth.component.scss
@@ -1,1 +1,13 @@
-@import '~@aws-amplify/ui-angular/theme.css';
+$retroGrey: #212121;
+$retroGreen: #A7FF2D;
+
+.amplify-heading {
+    color: $retroGrey;
+    padding: var(--amplify-space-xl) 0 0 var(--amplify-space-xl);
+}
+
+.amplify-image{
+    padding: 2px; 
+    text-align: center; 
+    width: 50%;
+}
