--- a/rabbithole/src/styles.scss
+++ b/rabbithole/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+
+// This must be here in order to access the default CSS from Amplify's UI 
+@import '~@aws-amplify/ui-angular/theme.css';
+
 html, body { height: 100%; background-color: #212121; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
