--- a/rabbithole/src/app/components/home/landingpage/landingpage.component.html
+++ b/rabbithole/src/app/components/home/landingpage/landingpage.component.html
@@ -1,11 +1,10 @@
 <div id="home-page">
     <div id="homeMiddle">
             
-        <h1 id="homePageHeader">Hop into the rabbithole</h1>
-        <button mat-flat-button color="#A7FF2D" class="button-hover">Continue to app</button>
-        <br />
-        <br />
-        <button mat-flat-button color="#A7FF2D" class="button-hover">Login</button>
+        <h1 id="homePageHeader">JUMP DOWN THE RABBITHOLE</h1>
+        
+        <!-- <button mat-flat-button color="#A7FF2D" class="button-hover">Login</button> -->
+        <app-auth></app-auth>
 
     </div>
 
