Added Toggle to login button with animations to toggle between login and signup

--- a/rabbithole/src/app/app.component.html
+++ b/rabbithole/src/app/app.component.html
@@ -5,3 +5,9 @@
 <ng-container *ngIf="authenticator.route !== 'authenticated'">
   <app-landingpage></app-landingpage>
 </ng-container>
+
+<!-- <ng-container *ngIf="authenticator.authStatus === 'configuring'">
+  <div class="drawing" id="loading">
+		<div class="loading-dot"></div>
+	</div>
+</ng-container> -->
