Added styling to the create account and login component

--- a/rabbithole/src/app/components/home/auth/auth.component.html
+++ b/rabbithole/src/app/components/home/auth/auth.component.html
@@ -5,20 +5,20 @@
       </div>
     </ng-template>
   
-    <ng-template amplifySlot="sign-in-header">
-        <h3 class="amplify-heading">
+    <ng-template amplifySlot="sign-in-header" >
+        <h3 class="amplify-heading" style="color: #bfbfbf;">
           Sign in to your account
         </h3>
     </ng-template>
     
     <ng-template amplifySlot="sign-up-header">
-        <h3 class="amplify-heading">
+        <h3 class="amplify-heading" style="color: #bfbfbf;">
           Create a new account
         </h3>
     </ng-template>
     
       <ng-template amplifySlot="sign-up-footer">
-        <div style="text-align: center">
+        <div class="amplify-signup">
           <button
             (click)="authenticator.toSignIn()"
             class="amplify-button amplify-field-group__control"
