Took out logo because its causing issues

--- a/rabbithole/src/app/components/home/auth/auth.component.html
+++ b/rabbithole/src/app/components/home/auth/auth.component.html
@@ -1,8 +1,8 @@
 <amplify-authenticator [socialProviders]="['google']">
     <ng-template amplifySlot="header">
-      <div>
+      <!-- <div>
         <img class="amplify-image" alt="Amplify logo" src="../../../../assets/images/rabbithole-logo.png"/>
-      </div>
+      </div> -->
     </ng-template>
   
     <ng-template amplifySlot="sign-in-header" >
