--- a/rabbithole/src/app/components/home/auth/auth.component.html
+++ b/rabbithole/src/app/components/home/auth/auth.component.html
@@ -6,15 +6,11 @@
     </ng-template>
   
     <ng-template amplifySlot="sign-in-header" >
-        <h3 class="amplify-heading" style="color: #bfbfbf;">
-          Sign in to your account
-        </h3>
+      <img class="amplify-image" alt="Amplify logo" src="../../../../assets/images/rabbithole-logo.png"/>
     </ng-template>
     
     <ng-template amplifySlot="sign-up-header">
-        <h3 class="amplify-heading" style="color: #bfbfbf;">
-          Create a new account
-        </h3>
+      <img class="amplify-image" alt="Amplify logo" src="../../../../assets/images/rabbithole-logo.png"/>
     </ng-template>
     
       <ng-template amplifySlot="sign-up-footer">
