--- a/rabbithole/src/app/app.component.html
+++ b/rabbithole/src/app/app.component.html
@@ -1,5 +1,24 @@
 <ng-container *ngIf="authenticator.route === 'authenticated'">
-  <router-outlet></router-outlet>
+  <mat-drawer-container class="example-container" autosize >
+    <mat-drawer #drawer class="example-sidenav" mode="side" opened>
+        <button class="nav-button-top"><mat-icon>keyboard_arrow_left</mat-icon></button> <button class="nav-button-top"><mat-icon>keyboard_arrow_right</mat-icon></button>
+        <button class="nav-button"><mat-icon>chat_bubble_outline</mat-icon></button>  <!-- Get icon names from material.io/icons -->
+        <button class="nav-button"><mat-icon>groups</mat-icon></button>
+        <button class="nav-button"><mat-icon>calendar_month</mat-icon></button>
+        <button class="nav-button"><mat-icon>videocam</mat-icon></button>
+        <button class="nav-button"><mat-icon>playlist_add_check</mat-icon></button>
+        <button class="nav-button-bottom" id="profile"><mat-icon>person_outline</mat-icon></button>
+        <button class="nav-button-bottom"><mat-icon>settings</mat-icon></button>
+    </mat-drawer>
+
+    <mat-drawer-content>
+
+      <router-outlet></router-outlet>
+      <button (click)="authenticator.signOut()" style="color:blue">SIGN OUT</button>
+
+    </mat-drawer-content>
+    
+</mat-drawer-container>
 </ng-container>
 
 <ng-container *ngIf="authenticator.route !== 'authenticated'">
