--- a/rabbithole/src/app/app.component.scss
+++ b/rabbithole/src/app/app.component.scss
@@ -6,6 +6,165 @@
     background-color: #3a3a3a;
 }
 
+.example-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #212121;
+}
+
+.example-sidenav
+{
+    display: flex;
+    -ms-flex-align: center;
+    background: #212121;
+    // background: red;
+    color: #636363;
+} 
+
+mat-icon:hover{
+    color: #A7FF2D;  //will have to have a way to show which section we are currently in so may need to change hover color
+}
+
+mat-icon{
+    color: #636363;
+}
+
+.mat-icon{
+    font-size: 30px;
+}
+
+.nav-button{
+    background-color: #212121;
+    border-style: none; 
+    display: block;
+    margin: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.nav-button-top{
+    display: inline;
+    background-color: #212121;
+    border-style: none; 
+    padding-top: 10px;
+}
+
+.nav-button-bottom{
+    background-color: #212121;
+    border-style: none; 
+    position: absolute;
+    bottom:0;
+    display: block;
+    margin: auto;
+    left:10px;
+}
+
+#profile{
+    padding-bottom: 50px;
+}
+
+#sidetab{
+    width:400px;
+    height:100%;
+    z-index: 10;
+    background-color: #3E3D3D;   
+    text-align: center;
+}
+
+#sidetab>h1{
+
+    color:#A7FF2D;
+    font-family: 'Open Sans', sans-serif;
+    padding-left: 15px;
+    font-weight: bold;
+    display: inline-block;
+}
+
+#sidetab > button{
+    color:#A7FF2D;
+    background-color: #3E3D3D;
+    border-style: none; 
+    display: inline-block;
+    padding-left: 80px;
+    padding-top: 10px;
+}
+
+#sidetab > button > mat-icon{
+    color:#A7FF2D;
+}
+
+.tabBlock{
+    margin-top:10px;
+    margin-bottom: 10px;
+    width: 350px;
+    height: 100px;
+    background-color: #212121;
+    display: inline-block;
+    border-radius: 10px;
+    text-align: left;
+    filter: drop-shadow(0 0.75rem 0.75rem #212121)
+}
+
+.tabBlock > h2{ 
+    position: relative;
+    top: 0.5em;
+    color:#A7FF2D;
+    padding-left:10px;
+}
+
+.tabBlock > p{
+    color: #6C6C6C;
+    padding-left: 10px;
+    font-size: 1.2em;
+} 
+
+.tabBlock > .dateTime{
+    position: absolute;
+    font-size: 0.8em;
+    padding-right: 10px;
+    bottom: 0;
+    right: 0;
+   
+}
+
+
+.tabBlockSelected{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 350px;
+    height: 100px;
+    background-color: #636363;
+    display: inline-block;
+    border-radius: 10px;
+    text-align: left;
+    filter: drop-shadow(0 0.5rem 0.7rem #636363)
+    
+}
+
+.tabBlockSelected > h2{ 
+    position: relative;
+    top: 0.5em;
+    color:#A7FF2D;
+    padding-left:10px;
+}
+
+.tabBlockSelected > p{
+    color: #FFFFFF;
+    padding-left: 10px;
+    font-size: 1.2em;
+} 
+
+.tabBlockSelected > .dateTime{
+    position: absolute;
+    font-size: 0.8em;
+    padding-right: 10px;
+    bottom: 0;
+    right: 0;
+}
+
 
 
 
