Added class to sign out btn

--- a/rabbithole/src/app/app.component.html
+++ b/rabbithole/src/app/app.component.html
@@ -9,7 +9,7 @@
         <button class="nav-button"><mat-icon>playlist_add_check</mat-icon></button>
         <button class="nav-button-bottom" id="profile"><mat-icon>person_outline</mat-icon></button>
         <button class="nav-button-bottom"><mat-icon>settings</mat-icon></button>
-        <button (click)="authenticator.signOut()" style="color:blue">SIGN OUT</button>
+        <button class="nav-button-bottom" (click)="authenticator.signOut()" style="color:blue">SIGN OUT</button>
     </mat-drawer>
 
     <mat-drawer-content>
