edited table colours and remove files where needed

--- a/rabbithole/src/app/sub-systems/claims/screens/view-claims/view-claims.component.html
+++ b/rabbithole/src/app/sub-systems/claims/screens/view-claims/view-claims.component.html
@@ -13,7 +13,7 @@
             <span matBadge="2" matBadgeOverlap="false"> Accepted </span>
         </ng-template>
         <div class="tab-content">
-            Accepted
+            <app-claims-table></app-claims-table>
         </div>
     </mat-tab>
     <mat-tab>
@@ -21,7 +21,7 @@
             <span matBadge="8" matBadgeOverlap="false"> Declined </span>
         </ng-template>
         <div class="tab-content">
-            Declined 
+            <app-claims-table></app-claims-table>
         </div>
     </mat-tab>
 </mat-tab-group>
