--- a/rabbithole/src/app/sub-systems/claims/screens/view-claims/view-claims.component.html
+++ b/rabbithole/src/app/sub-systems/claims/screens/view-claims/view-claims.component.html
@@ -1,4 +1,12 @@
-<h1 id="claims-heading"> CLAIMS </h1>
+<div>
+    <h1 id="claims-heading-left"> CLAIMS </h1>
+    <button (click)="createClaimNavigation()" id="claims-heading-right" mat-fab color="primary" aria-label="Example icon button with a delete icon">
+        <mat-icon id="add-claim-icon">add</mat-icon>
+    </button>
+</div>
+<br/>
+<br/>
+<br/>
 <mat-tab-group dynamicHeight animationDuration="1200ms">
     <mat-tab>
         <ng-template mat-tab-label>
@@ -25,3 +33,4 @@
         </div>
     </mat-tab>
 </mat-tab-group>
+
