--- a/rabbithole/src/app/sub-systems/claims/screens/create-claim/create-claim.component.html
+++ b/rabbithole/src/app/sub-systems/claims/screens/create-claim/create-claim.component.html
@@ -1,13 +1,23 @@
 <p>create-claim works!</p>
 <div id="backgroundRocks">
-<img id= "spaceRock001" src="../../../../assets/images/spaceRock2.svg">
-<img id= "spaceRock002" src="../../../../assets/images/spaceRock3.svg">
-<img id= "spaceRock003" src="../../../../assets/images/spaceRock1.svg">
-<img id= "spaceRock004" src="../../../../assets/images/spaceRock4.svg">
-<img id= "spaceRock005" src="../../../../assets/images/spaceRock3.svg">
-<img id= "spaceRock006" src="../../../../assets/images/spaceRock1.svg">
-<img id= "spaceRock007" src="../../../../assets/images/spaceRock2.svg">
-<img id= "spaceRock008" src="../../../../assets/images/spaceRock4.svg">
-<img id= "spaceRock009" src="../../../../assets/images/spaceRock4.svg">
-
+    <img id= "spaceRock001" src="../../../../assets/images/spaceRock2.svg">
+    <img id= "spaceRock002" src="../../../../assets/images/spaceRock3.svg">
+    <img id= "spaceRock003" src="../../../../assets/images/spaceRock1.svg">
+    <img id= "spaceRock004" src="../../../../assets/images/spaceRock4.svg">
+    <img id= "spaceRock005" src="../../../../assets/images/spaceRock3.svg">
+    <img id= "spaceRock006" src="../../../../assets/images/spaceRock1.svg">
+    <img id= "spaceRock007" src="../../../../assets/images/spaceRock2.svg">
+    <img id= "spaceRock008" src="../../../../assets/images/spaceRock4.svg">
+    <img id= "spaceRock009" src="../../../../assets/images/spaceRock4.svg">
 </div>
+
+<ng-container>
+    <div class="uploadClaim">
+        <ngx-dropzone (change)="onSelect($event)">
+            <ngx-dropzone-label>Drop it, baby!</ngx-dropzone-label>
+            <ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
+                <ngx-dropzone-label> {{ f.name }} </ngx-dropzone-label>
+            </ngx-dropzone-preview>
+        </ngx-dropzone>
+    </div>
+</ng-container>
