--- a/rabbithole/src/app/sub-systems/claims/screens/create-claim/create-claim.component.scss
+++ b/rabbithole/src/app/sub-systems/claims/screens/create-claim/create-claim.component.scss
@@ -1,3 +1,29 @@
+$greenColour: #A7FF2D;
+$greyColour: #636363;
+$darkColour: #212121;
+
+ngx-dropzone-label{
+    padding: 10px;
+}
+
+ngx-dropzone{
+    width: 30%;
+    height: 250px;
+    margin: auto;
+    background-color: $greyColour;
+    color: $greenColour;
+    border: $greenColour 1px dashed;
+    justify-content: center;
+}
+
+::ng-deep ngx-dropzone-preview {
+    max-width: 100% !important; 
+    max-height: 100% !important;
+    background-color: $greenColour !important;
+    color: $darkColour;
+}
+
+
 #backgroundRocks{
     z-index: -1000;
     #spaceRock001{
