--- a/rabbithole/src/app/sub-systems/claims/components/upload-claim/upload-claim.component.scss
+++ b/rabbithole/src/app/sub-systems/claims/components/upload-claim/upload-claim.component.scss
@@ -39,3 +39,9 @@ ngx-dropzone{
     margin: 15px 0;
     align-items: flex-start;
 }
+
+#claim-type-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
