--- a/rabbithole/src/app/sub-systems/claims/components/review-claim/review-claim.component.html
+++ b/rabbithole/src/app/sub-systems/claims/components/review-claim/review-claim.component.html
@@ -1,40 +1,53 @@
-<form><!-- [formGroup]="userAdd" (ngSubmit)="AddUser()" -->
-    <mat-form-field appearance="fill">
-        <mat-label>Type of claim</mat-label>
-        <mat-select>
-          <mat-option value="travel"> Travel </mat-option>
-          <mat-option value="entertainment"> Entertainment </mat-option>
-          <mat-option value="data&cellphone"> Data / Cellphone </mat-option>
-          <mat-option value="misc"> Miscellaneous </mat-option>
-        </mat-select>
-        <mat-hint> What category of claim does yours fall under</mat-hint>
+<div class="form-div">
+    <h1 id="review-claims-heading">Review Claim</h1>
+  <form class="form-form">
+    <!-- [formGroup]="userAdd" (ngSubmit)="AddUser()" -->
+    <mat-form-field appearance="fill" class="form-field">
+      <mat-label>Type of claim</mat-label>
+      <mat-select>
+        <mat-option value="travel"> Travel </mat-option>
+        <mat-option value="entertainment"> Entertainment </mat-option>
+        <mat-option value="data&cellphone"> Data / Cellphone </mat-option>
+        <mat-option value="misc"> Miscellaneous </mat-option>
+      </mat-select>
+      <mat-hint>Select your claim category</mat-hint>
     </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label> Claim Description </mat-label>
-        <textarea matInput></textarea>
+    <br />
+    <br />
+    <mat-form-field appearance="fill" class="form-field">
+      <mat-label> Claim Description </mat-label>
+      <textarea matInput></textarea>
+      <mat-hint>Input a description of your claim</mat-hint>
     </mat-form-field>
-
-    <mat-form-field appearance="legacy">
-        <mat-label> Vendor Name </mat-label>
-        <input matInput placeholder="Uber">
-        <mat-hint>This is the vendor's name</mat-hint>
+    <br />
+    <br />
+    <mat-form-field appearance="fill" class="form-field">
+      <mat-label> Vendor Name </mat-label>
+      <input matInput placeholder="Uber" />
+      <mat-hint>Name of vendor</mat-hint>
     </mat-form-field>
-
-    <mat-form-field appearance="legacy">
-        <mat-label> Total: </mat-label>
-        <input matInput placeholder="230 ZAR">
-        <mat-hint>Total amount of claim</mat-hint>
+    <br />
+    <br />
+    <mat-form-field appearance="fill" class="form-field">
+      <mat-label> Total: </mat-label>
+      <input matInput placeholder="230 ZAR" />
+      <mat-hint>Total amount of claim</mat-hint>
     </mat-form-field>
-
-    <mat-form-field appearance="legacy">
-        <mat-label> 2022/06/11  </mat-label>
-        <input matInput placeholder="2022/06/11">
-        <mat-hint>Date of claim</mat-hint>
+    <br />
+    <br />
+    <mat-form-field appearance="fill" class="form-field">
+      <mat-label> 2022/06/11 </mat-label>
+      <input matInput placeholder="2022/06/11" />
+      <mat-hint>Date of claim</mat-hint>
     </mat-form-field>
-
-    <mat-form-field appearance="fill">
-        <mat-label> Notes on claim </mat-label>
-        <textarea matInput></textarea>
-    </mat-form-field> 
-</form>
+    <br />
+    <br />
+    <mat-form-field appearance="fill" class="form-field">
+      <mat-label> Notes on claim </mat-label>
+      <textarea matInput></textarea>
+      <mat-hint>Input any additional notes about your claim</mat-hint>
+    </mat-form-field>
+    <br />
+    <br />
+  </form>
+</div>
