--- a/rabbithole/src/app/sub-systems/claims/components/claims-table/claims-table.component.html
+++ b/rabbithole/src/app/sub-systems/claims/components/claims-table/claims-table.component.html
@@ -9,7 +9,7 @@
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> NAME </th>
+        <th mat-header-cell *matHeaderCellDef> name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
   
