Front-end styling

--- a/rabbithole/src/app/sub-systems/claims/screens/view-claims/view-claims.component.html
+++ b/rabbithole/src/app/sub-systems/claims/screens/view-claims/view-claims.component.html
@@ -1,5 +1,6 @@
 <div>
     <h1 id="claims-heading-left"> CLAIMS </h1>
+    <h2 id="claims-heading-right"> Create a claim </h2>
     <button (click)="createClaimNavigation()" id="claims-heading-right" mat-fab color="primary" aria-label="Example icon button with a delete icon">
         <mat-icon id="add-claim-icon">add</mat-icon>
     </button>
