--- a/rabbithole/src/app/sub-systems/chat/components/chat-landing/chat-landing.component.scss
+++ b/rabbithole/src/app/sub-systems/chat/components/chat-landing/chat-landing.component.scss
@@ -93,7 +93,7 @@
 
 #MessageSearchInput
 {
-    color: #6C6C6C;
+    color: #EDEDED;
     font-family: 'Open Sans', sans-serif;
     border-radius: 30px;
     background: #3E3D3D;
@@ -125,7 +125,7 @@
     display: block;
     border-radius: 5px;
     background: #3E3D3D;
-    color: #6C6C6C;
+    color: #EDEDED;
     width: 600px;
     font-size: 12pt;
     border: 0;
