--- a/rabbithole/src/app/sub-systems/claims/components/claims-table/claims-table.component.html
+++ b/rabbithole/src/app/sub-systems/claims/components/claims-table/claims-table.component.html
@@ -3,27 +3,29 @@
   
       <!-- Position Column -->
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <th mat-header-cell *matHeaderCellDef> Invoice ID. </th>
         <td mat-cell *matCellDef="let element"> {{element.position}} </td>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> name </th>
+        <th mat-header-cell *matHeaderCellDef> Vendor Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
   
       <!-- Weight Column -->
       <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
+        <th mat-header-cell *matHeaderCellDef> Date </th>
         <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
       </ng-container>
   
       <!-- Symbol Column -->
       <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
+        <th mat-header-cell *matHeaderCellDef>  Amount</th>
         <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
       </ng-container>
+
+
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
